src/objects/MPP_Transaction_History__c.object
<CustomObject>
    <fields>
        <fullName>AUDDIS_Ref__c</fullName>
        <externalId>true</externalId>
        <label>AUDDIS Ref</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>American Express</fullName>
                </value>
                <value>
                <fullName>Mastercard</fullName>
                </value>
                <value>
                <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>&apos;GBP&apos;</defaultValue>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_Name__c</fullName>
        <label>DD Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Account_Number__c</fullName>
        <label>DD Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Payment_Completion_Date__c</fullName>
        <description>The date when DD payment is completed within business. Currently it is 5 days after payment date.</description>
        <formula>IF(AND(ISPICKVAL(Payment_Type__c,&apos;DirectDebit&apos;), ISPICKVAL(Sale_Type__c, &apos;Sale&apos;), ISPICKVAL(Payment_status__c, &apos;Success&apos;)), DATEVALUE(Payment_Date__c) + 5, NULL)</formula>
        <inlineHelpText>The date when DD payment is completed within business. Currently it is 5 days after payment date.</inlineHelpText>
        <label>DD Payment Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Sort_Code__c</fullName>
        <label>DD Sort Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Transaction_Type__c</fullName>
        <label>DD Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>AUDDIS</fullName>
                </value>
                <value>
                <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Subscription_ID__c</fullName>
        <label>MPP Digital Subscription ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <label>Failure Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Payment_Reason__c</fullName>
        <label>One Time Payment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                <fullName>Tablet Access</fullName>
                </value>
                <value>
                <fullName>Undated Vouchers</fullName>
                </value>
                <value>
                <fullName>Missed payment</fullName>
                </value>
                <value>
                <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Submission_Date__c</fullName>
        <label>Payment Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>DirectDebit</fullName>
                </value>
                <value>
                <fullName>CreditDebitCard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_status__c</fullName>
        <label>Payment status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Failed</fullName>
                </value>
                <value>
                <fullName>Cancelled</fullName>
                </value>
                <value>
                <fullName>Refund</fullName>
                </value>
                <value>
                <fullName>Success</fullName>
                </value>
                <value>
                <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium_Subscription_ID__c</fullName>
        <label>MPP Premium Subscription ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Subscription_ID_from_Sub__c</fullName>
        <formula>Subscription__r.MPP_Premium_Subscription_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Subscription ID from Sub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_name__c</fullName>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refunded_Order__c</fullName>
        <label>Refunded Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Order_ID__c</fullName>
        <description>Sale Order Id refund is done for</description>
        <inlineHelpText>Sale Order Id refund is done for</inlineHelpText>
        <label>Sale Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <label>Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Sale</fullName>
                </value>
                <value>
                <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscriber Account</description>
        <label>Subscriber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MPP Transaction Histories</relationshipLabel>
        <relationshipName>MPP_Transaction_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <formula>Subscription__r.Start_Date__c</formula>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Continuous</fullName>
                </value>
                <value>
                <fullName>One off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>MPP Transaction Histories</relationshipLabel>
        <relationshipName>MPP_Transaction_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Country__c</fullName>
        <label>VAT Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Type__c</fullName>
        <label>VAT Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>UK Standard</fullName>
                <default>true</default>
                    <label>UK Standard</label>
                </value>
                <value>
                <fullName>EU Standard</fullName>
                </value>
                <value>
                <fullName>UK Zero</fullName>
                </value>
                <value>
                <fullName>Non EU Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MPP Transaction History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPP-{0000}</displayFormat>
        <label>MPP Transaction History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPP Transaction Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sale_Order_Id_Required_For_Refunds</fullName>
        <active>true</active>
        <description>Manually created MPP Transaction History record for refund must contain original sale order id.</description>
        <errorConditionFormula>AND(ISPICKVAL( Payment_status__c, &apos;Refund&apos; ), ISPICKVAL( Sale_Type__c, &apos;Refund&apos;), ISBLANK(Sale_Order_ID__c), $Profile.Name != &apos;TMG System&apos;)</errorConditionFormula>
        <errorDisplayField>Sale_Order_ID__c</errorDisplayField>
        <errorMessage>Sale Order Id is required for refund</errorMessage>
    </validationRules>
</CustomObject>